fixed chrome capability for spacing

--- a/style/_safari.scss
+++ b/style/_safari.scss
@@ -155,18 +155,17 @@
 
             }
             &-right {
-              display: flex;
-              position: relative;
-              left: 90px;
-              top: 15px;
+
+              display: grid;
+              grid-template-columns: 50px 10px 50px 10px 50px 10px;
+              margin-left: 80px;
               
               
               p {
                 font-size: small;
-                position: relative;
-                top: 10px;
-                right: 33px;
+                transform: translate(-30px,3px );
               }
+              
               
             }
             &-videostats{
